--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.3",
         "laravel/tinker": "^1.0",
+        "maatwebsite/excel": "^3.1",
         "y-ui/laravel-running-time": "^1.1"
     },
     "require-dev": {
